--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
     "angular": "^1.5.8",
     "angular-material": "^1.0.9",
     "angular-route": "^1.5.8",
-    "angular-ui-router": "^0.3.1"
+    "angular-ui-router": "^0.3.1",
+    "google-code-prettify":"1.0.5"
   }
 }
