--- a/package.json
+++ b/package.json
@@ -3,33 +3,28 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node app.js"
   },
   "dependencies": {
-    "bluebird": "^3.4.1",
-    "body-parser": "~1.15.1",
-    "cookie-parser": "~1.4.3",
-    "debug": "~2.2.0",
-    "express": "~4.13.4",
+    "koa": "^2.1.0",
+    "koa-body": "^2.0.0",
+    "koa-router": "^7.0.1",
+    "koa-static": "^3.0.0",
+    "mongodb": "^2.2.5",
+    "node-uuid": "^1.4.7",
+    "request": "^2.74.0",
+    "showdown": "^1.4.2"
+  },
+  "devDependencies": {
+    "gulp-nodemon": "^2.1.0",
     "gulp": "^3.9.1",
+    "merge-stream": "^1.0.0",
     "gulp-changed": "^1.3.1",
     "gulp-clean": "^0.3.2",
     "gulp-concat": "^2.6.0",
     "gulp-less": "^3.1.0",
     "gulp-merge": "^0.1.1",
     "gulp-minify-css": "^1.2.4",
-    "gulp-uglify": "^2.0.0",
-    "jade": "~1.11.0",
-    "merge-stream": "^1.0.0",
-    "mongodb": "^2.2.5",
-    "morgan": "~1.7.0",
-    "node-uuid": "^1.4.7",
-    "request": "^2.74.0",
-    "serve-favicon": "~2.3.0",
-    "showdown": "^1.4.2",
-    "swig": "^1.4.2"
-  },
-  "devDependencies": {
-    "gulp-nodemon": "^2.1.0"
+    "gulp-uglify": "^2.0.0"
   }
 }
