--- a/bower.json
+++ b/bower.json
@@ -17,15 +17,15 @@
   ],
   "dependencies": {
     "font-awesome": "~4.2.0",
-    "bootstrap": "3.3.0",
-    "angular": "1.3.2",
+    "bootstrap": "^3.3.7",
+    "angular": "^1.5.8",
     "angular-animate": "1.3.2",
     "angular-cookies": "1.3.2",
     "angular-resource": "1.3.2",
     "angular-touch": "1.3.2",
     "angular-sanitize": "1.3.2",
     "angular-translate": "~2.2.0",
-    "angular-ui-router": "~0.2.11",
+    "angular-ui-router": "^0.3.1",
     "ngstorage": "~0.3.0",
     "oclazyload": "0.5.0",
     "angular-bootstrap": "0.12.0",
@@ -47,13 +47,11 @@
     "videogular-overlay-play": "~0.7.0",
     "videogular-poster": "~0.7.0",
     "videogular-ima-ads": "~0.7.0",
-
     "jquery": "^3.1.0",
-    "bootstrap": "^3.3.7",
-    "angular": "^1.5.8",
     "angular-material": "^1.0.9",
     "angular-route": "^1.5.8",
-    "angular-ui-router": "^0.3.1",
-    "google-code-prettify":"1.0.5"
+    "google-code-prettify": "1.0.5",
+    "ng-showdown": "^1.1.0",
+    "showdown": "^1.6.4"
   }
 }
